syntax = "proto3";

option java_multiple_files = true;
option java_package = "defyle.server.file.proto";
option java_outer_classname = "FileServiceProto";

package proto;

import "shared.proto";

service FileServiceProto {
  rpc Insert (FileInsertRequestProto) returns (FileProto) {}
  rpc Find (FileFindRequestProto) returns (FileProto) {}
  rpc FindByField(FileFindByFieldRequestProto) returns (FileProto) {}
  rpc FindAllForInode (FileFindAllForInodeRequestProto) returns (FileFindAllForInodeResponseProto) {}
  rpc FindAllForInodePaged (FileFindAllForInodePagedRequestProto) returns (FileFindAllForInodePagedResponseProto) {}
  rpc FindLatestForInode (FileFindLatestForInodeRequestProto) returns (FileProto) {}
  rpc Update (FileUpdateRequestProto) returns (FileProto) {}
  rpc SetProperty (FileSetPropertyRequestProto) returns (Empty) {}
  rpc GetProperty (FileGetPropertyRequestProto) returns (FileGetPropertyResponseProto) {}
  rpc GetProperties (FileGetPropertiesRequestProto) returns (FileGetPropertiesResponseProto) {}
  rpc Delete (FileDeleteRequestProto) returns (Empty) {}
  rpc GetFileType(FileGetFileTypeRequestProto) returns (FileGetFileTypeResponseProto) {}
  rpc GetFileCategory(FileGetFileCategoryRequestProto) returns (FileGetFileCategoryResponseProto) {}
}

message FileInsertRequestProto {
  string userId = 1;
  string nodeId = 2;
  FileProto file = 3;
}

message FileFindRequestProto {
  string userId = 1;
  string id = 2;
}

message FileFindByFieldRequestProto {
  string userId = 1;
  string field = 2;
  string value = 3;
}

message FileFindAllForInodeRequestProto {
  string userId = 1;
  string nodeId = 2;
}

message FileFindAllForInodeResponseProto {
  repeated FileProto files = 1;
}

message FileFindAllForInodePagedRequestProto {
  string userId = 1;
  string nodeId = 2;
  int64 page = 3;
  int64 size = 4;
}

message FileFindAllForInodePagedResponseProto {
  repeated FileProto data = 1;
  int64 totalPages = 2;
  int64 totalElements = 3;
  int64 page = 4;
  int64 size = 5;
}

message FileFindLatestForInodeRequestProto {
  string userId = 1;
  string nodeId = 2;
}

message FileUpdateRequestProto {
  string userId = 1;
  FileProto file = 2;
}

message FileSetPropertyRequestProto {
  string userId = 1;
  FileProto file = 2;
  string propertyName = 3;
  string value = 4;
}

message FileGetPropertyRequestProto {
  string userId = 1;
  FileProto file = 2;
  string propertyName = 3;
}

message FileGetPropertyResponseProto {
  string value = 1;
}

message FileGetPropertiesRequestProto {
  string userId = 1;
  FileProto file = 2;
}

message FileGetPropertiesResponseProto {
  repeated FilePropertyProto properties = 1;
}

message FileDeleteRequestProto {
  string userId = 1;
  FileProto file = 2;
}

message FileGetFileTypeRequestProto {
  string mime = 1;
}

message FileGetFileTypeResponseProto {
  string fileType = 1;
}

message FileGetFileCategoryRequestProto {
  string fileType = 1;
}

message FileGetFileCategoryResponseProto {
  string fileCategory = 1;
}

message FileProto {
  string id = 1;
  string extension = 2;
  string mime = 3;
  bool indexContent = 4;
  int64 size = 5;
  int64 version = 6;
  int64 createTime = 7;
	int64 updateTime = 8;
}

message FilePropertyProto {
  string name = 1;
  string value = 2;
  string type = 3;
  int64 createTime = 4;
  int64 updateTime = 5;
}